[cmake] Use KDEInstallDirs for installation paths.
1. Don't use absolute paths anywhere beyond CMAKE_INSTALL_PREFIX
2. Removed hardcoded subpaths like "include" and "lib/cmake".

Change-Id: I40c2948b773961579d885c438c12f0a8598d1223

--- a/Source/WebKit/CMakeLists.txt
+++ b/Source/WebKit/CMakeLists.txt
@@ -66,7 +66,7 @@ WEBKIT_FRAMEWORK(WebKit)
 set_target_properties(WebKit PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
 install(TARGETS WebKit EXPORT WebKitTargets
         DESTINATION "${LIB_INSTALL_DIR}"
-        INCLUDES DESTINATION "${CMAKE_INSTALL_PREFIX}/include/QtWebKitWidgets"
+        INCLUDES DESTINATION "${KDE_INSTALL_INCLUDEDIR}/QtWebKitWidgets"
 )
 
 add_dependencies(WebKit WebCore)
