adding WKCookie type to set cookies as is
setting all the cookies as a list of strings and parsing with soup_cookie_parse
doesn't always work as soup_cookie_parse adds a dot to the beginning of the domain so
saving cookies from the outside with getCookies and setting them back with
setCookies domain is modified changing the application of the cookie.

Passing as a WKCookie/WebCore::Cookie domain can be set as is.

--- a/Source/WebKit2/CMakeLists.txt
+++ b/Source/WebKit2/CMakeLists.txt
@@ -419,6 +419,7 @@ set(WebKit2_SOURCES
     UIProcess/API/C/WKBatteryStatus.cpp
     UIProcess/API/C/WKContext.cpp
     UIProcess/API/C/WKContextConfigurationRef.cpp
+    UIProcess/API/C/WKCookie.cpp
     UIProcess/API/C/WKCookieManager.cpp
     UIProcess/API/C/WKCredential.cpp
     UIProcess/API/C/WKDownload.cpp
