--- a/Source/WebKit2/WebProcess/Cookies/WebCookieManager.messages.in
+++ b/Source/WebKit2/WebProcess/Cookies/WebCookieManager.messages.in
@@ -32,8 +32,8 @@
 
     void SetHTTPCookieAcceptPolicy(uint32_t policy)
     void GetHTTPCookieAcceptPolicy(uint64_t callbackID)
-    
-    void SetCookies(Vector<String> cookies)
+
+    void SetCookies(Vector<WebCore::Cookie> cookies)
     void GetCookies(uint64_t callbackID)
 
     void StartObservingCookieChanges()
