--- a/Source/WebKit2/UIProcess/WebCookieManagerProxy.messages.in
+++ b/Source/WebKit2/UIProcess/WebCookieManagerProxy.messages.in
@@ -23,8 +23,8 @@
 messages -> WebCookieManagerProxy {
     DidGetHostnamesWithCookies(Vector<String> hostnames, uint64_t callbackID);
     DidGetHTTPCookieAcceptPolicy(uint32_t policy, uint64_t callbackID);
-    
-    DidGetCookies(Vector<String> cookies, uint64_t callbackID)
+
+    DidGetCookies(Vector<WebCore::Cookie> cookies, uint64_t callbackID)
 
     CookiesDidChange()
 }
